# DRSynth

./: .gitignore  CMakeLists.txt  README.md  run.sh
cmake/: Settings.cmake  SourcesAndHeaders.cmake  Tests.cmake
src/: main.cpp
